[metadata]
name = UnSpag-SpruceMarcy
version = 0.0.0
author = Marcy Brook
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SpruceMarcy/uncooked-spaghetti
project_urls =
    Bug Tracker = https://github.com/SpruceMarcy/uncooked-spaghetti/issues
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    License :: Public Domain
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src